# indoor-Collision-Avoidance-and-Mapping-System

./: README.md  requirements.txt  setup.sh
api_server/: config.py  main.py
api_server/controllers/: map_controller.py  pose_controller.py  robot_controller.py
api_server/models/: map_model.py  pose_model.py
api_server/routes/: collision.py  map.py  pose.py  robot.py
collision_avoidance/: avoidance_controller.py  depth_estimator.py  motion_planner.py  obstacle_detector.py  safety_monitor.py
config/: api_config.yaml  camera_config.yaml  database_config.yaml  mapping_config.yaml  robot_config.yaml  vo_config.yaml
dashboard/: index.html  map.html  pose.html
dashboard/css/: style.css
database/: db_config.py  db_manager.py  insert_map.py  insert_pose.py  models.py  query_map.py  query_pose.py
docs/: api_documentation.md  installation_guide.md  user_manual.md
launch/: start_all.sh  start_api.sh  start_dashboard.sh  start_mapping.sh  start_vo.sh  stop_all.sh
mapping/: coordinate_transform.py  grid_mapper.py  map_visualizer.py  occupancy_grid.py
robot_control/: jetbot_interface.py  motor_controller.py  movement_commands.py  robot_state.py  velocity_controller.py
ros_workspace/src/jetbot_navigation/: CMakeLists.txt  package.xml
scripts/: calibrate_camera.py  install_dependencies.sh  setup_ros.sh  system_check.py  test_camera.py  test_motors.py
tests/: test_api.py  test_collision.py  test_database.py  test_mapping.py  test_vo.py
visual_odometry/: camera_model.py  feature_matcher.py  orb_detector.py  pose_estimator.py  trajectory.py  vo_main.py
(+29 files in other folders)
