<?xml version="1.0"?>
<package format="2">
  <name>jetbot_navigation</name>
  <version>0.0.1</version>
  <description>JetBot Indoor Navigation System</description>

  <maintainer email="ishan@example.com">Ishan Mitra</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>

</package>